[package]
name = "msclient"
version = "0.1.1"
authors = ["Xiao Qin <xiao@mogi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
ring = "0.16.0"
futures-util = "0.3.15"
data-encoding = "2.3.2"
# logging facilities
log = "0.4.0"
env_logger = "0.8.3"
# args parsing
clap = "2.33.3"
#
bytes = "1"
pin-project-lite = "0.2.6"
# progress bar
indicatif = "0.16.2"
